--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "@unhead/vue": "^2.0.3",
     "@vee-validate/zod": "^4.15.1",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vueuse/core": "^13.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
